style.css
div, section {
  --main-transition-left: left 500ms;
}

@media (prefers-color-scheme: dark) {
  .night.dark-scheme { background: #262626; color:  #ddd; }
  .night.border { border-bottom: 10px solid #0f0f0f !important; }
  .night.nav { background: #0f0f0f; box-shadow: 0px 1px 3px #ececec; }
  #toggle.night { color: #fff; border: 1px solid #fff; flex-direction: row; }
  #dark.set { background-color: rgb(65, 65, 65); }
  #light { color: #ececec }
}

html, ul, body {
  margin: 0;
  padding: 0;
}

body {
  font-family: Montserrat;
  font-display: swap;
  background-color: #f7f7f7;
}

#toggle {
  display: flex;
  justify-content: space-between;
  position: fixed;
  width: max-content;
  height: 30px;
  bottom: 9%;
  left: 50%;
  transform: translateX(-50%);
  background-color: black;
  opacity: .5;
  border: 1px solid black;
  border-radius: 500px;
  z-index: 5;
}

#light, #dark {
  border: none;
  background-color: transparent;
  border-radius: 100px;
  width: 50%;
  height: auto;
}

.icon {
  cursor: pointer;
  width: 20px;
}

#dark {
  color:rgb(65, 65, 65);
}

#light.set {
  background-color:rgb(65, 65, 65);
}

header {
  width: 100%;
  display: flex;
  flex-direction: column;
  position: fixed;
  background-color: #f7f7f7;
  box-shadow: 0px 1px 5px #1f1f1f;
  top: 0;
  transition: top 2s;
}

header .border-clip {
  width: 100%;
  position: absolute;
  height: 6px;
  top: 94%;
  background: linear-gradient(to right,rgb(121, 21, 121), rgb(255, 255, 57), rgb(52, 255, 228), rgb(255, 0, 149));
}

header.scrolled {
  top: -25%;
}

#nav-ul {
  display: flex;
  justify-content: space-around;
  list-style: none;
  text-align: center;
}

.nav-li {
  width: 33%;
  padding: 20px;
  font-weight: 700;
  text-shadow: 1px 1px 2px rgb(0 0 0 / 50%);
  cursor: pointer;
  transition-property: opacity;
  transition-duration: 750ms;
}

#section-wrapper {
  display: grid;
  margin: 7% 3%;
}

section.hide{
  width: 0%;
  position: absolute;
  left: -100%;
  transition: var(--main-transition-left);
}

.hide h1, .hide p {
  display: none;
}

.visible {
  width: 100%;
  display: block;
  position: absolute;
  left: 0%;
  transition: var(--main-transition-left);
}

#border-slide {
  position: absolute;
  transform: translateX(-50%);
  width: 300%;
  height: 70%;
  border-bottom: 10px solid #f7f7f7;
  transition: left 500ms;
}

header #border-slide {
  top: 20%;
}

footer #border-slide {
  bottom: -1px;
}

.behind-one {
  clip-path: polygon(0 0, 100% 0, 100% 100%, 60% 100%, 60% 50%, 49% 50%, 49% 100%, 0 100%);
  left: 0;
}

.behind-two {
  clip-path: polygon(0 0, 100% 0, 100% 100%, 60% 100%, 60% 50%, 49% 50%, 49% 100%, 0 100%);
  left: 36.5%;
}

.behind-three {
  clip-path: polygon(0 0, 100% 0, 100% 100%, 60% 100%, 60% 50%, 49% 50%, 49% 100%, 0 100%);
  left: 70%;
}

.desaturate {
  text-shadow: none;
  -webkit-filter: saturate(0);
  -o-filter: saturate(0);
  -ms-filter: saturate(0);
  -moz-filter: saturate(0);
  filter: saturate(0);
  opacity: .6;
  font-weight: 300;
}

.one-vis, .two-vis, .three-vis {
  grid-template-columns: 100%;
}

footer {
  position: fixed;
  width: 100%;
  bottom: 0;
  display: flex;
  flex-direction: column;
  transition: bottom 2s;
  background-color: #f7f7f7;
  box-shadow: 0px 1px 5px #1f1f1f;
}

footer .border-clip {
  width: 100%;
  position: absolute;
  height: 4px;
  bottom: 0;
  background: linear-gradient(to right,rgb(121, 21, 121), rgb(255, 255, 57), rgb(52, 255, 228), rgb(255, 0, 149));
}

footer.scrolled {
  bottom: -20%;
}

